# lex-process-researcher

./: .env.example  .gitignore  CANONICO.md  Dockerfile  MANIFEST.json  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
app/: __init__.py  cnj.py  config.py  key_provider.py  main.py  models.py  outbound_limit.py  registry.py  services.py
app/connectors/: __init__.py  datajud.py  manual.py
docs/: COMPLIANCE_DATAJUD.md  PLATFORM_CORE_EXECUTION_HANDOFF.md
inventory/: inventory.v0.3.0.json  status-matrix.v0.3.0.json
ops/: deployment-state.v0.3.0.json
tests/: test_cnj.py  test_datajud_contract.py  test_key_provider.py  test_outbound_limit.py  test_registry.py
